fix: open non-UTF-8 plain files (F-04)
Files.readString rejected the first invalid byte, so a Latin-1 or truncated
UTF-8 log failed with "Input length = 1" while the same bytes gzipped opened.