@@ -11,6 +11,7 @@ import java.io.FileInputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.util.stream.Collectors;
 import java.util.zip.ZipEntry;
@@ -40,7 +41,7 @@ public class FileUtils {
         } else if (fileNameLowerCase.endsWith(".zip")) {
             return loadSingleFileFromZipCompressedArchive(file);
         } else {
-            return Files.readString(file.toPath());
+            return new String(Files.readAllBytes(file.toPath()), StandardCharsets.UTF_8);
         }
     }
 
